# fcm-rust

./: Cargo.toml  README.md
examples/: simple_sender.rs
src/: lib.rs
src/client/: mod.rs  response.rs
src/message/: mod.rs  tests.rs
src/notification/: mod.rs
