[package]
name = "fcm_http1"
version = "0.1.2"
authors = [
  "etisreal <info@etisreal.cc>",
  "Ettore Pelosato <ettore.pelosato@gmail.com>"]
description = "An API to talk to FCM (Firebase Cloud Messaging) in Rust"
license = "MIT"
homepage = "https://github.com/ETisREAL/fcm-rust"
repository = "https://github.com/ETisREAL/fcm-rust"
documentation = "https://docs.rs/fcm/"
keywords = ["fcm", "firebase", "notification"]
edition = "2021"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
vendored-tls = ["reqwest/native-tls-vendored"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.3"
reqwest = {version = "0.11.0", features = ["json"], default-features=false}
chrono = "0.4"
log = "0.4"

[dev-dependencies]
argparse = "0.2.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.3"
